fix output overflow for some numbers

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ input:focus {
   justify-content: center;
   font-family: 'Crimson Text', serif;
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 2.1rem;
   background: #efedff;
   color: #55433b;
   text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
